--- a/.github/workflows/terraform-aws.yml
+++ b/.github/workflows/terraform-aws.yml
@@ -24,6 +24,9 @@ env:
   TF_WORKSPACE: ${{ secrets.TF_CLOUD_WORKSPACE }}
   AWS_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
   ECR_REPOSITORY: "lornu-ai-staging"
+  # Common TF Vars
+  TF_VAR_resource_prefix: ${{ secrets.PROD_RESOURCE_PREFIX }}
+  TF_VAR_github_repo: ${{ secrets.PROD_GITHUB_REPO }}
 
 jobs:
   build:
@@ -33,7 +36,7 @@ jobs:
     if: ${{ github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository }}
     outputs:
       image-uri: ${{ steps.build-image.outputs.image-uri }}
-    
+
     steps:
       - name: "Checkout"
         uses: actions/checkout@v4
@@ -42,9 +45,9 @@ jobs:
       - name: "Configure AWS Credentials"
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_ACTIONS_ROLE_ARN }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
-          audience: sts.amazonaws.com
 
       - name: "Login to Amazon ECR"
         id: login-ecr
@@ -83,14 +86,15 @@ jobs:
       - name: "Configure AWS Credentials"
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_ACTIONS_ROLE_ARN }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
       - name: "Setup Terraform"
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.8.0
-          cli_config_credentials_token: ${{ secrets.TERRAFORM_API_TOKEN }}
+          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
       - name: "Terraform Init"
         run: terraform -chdir=terraform/aws/staging init
@@ -155,3 +159,74 @@ jobs:
       - name: "Wait for Deployment"
         run: |
           kubectl rollout status deployment/staging-lornu-ai -n default --timeout=5m
+
+  prod-plan:
+    name: "Production Plan"
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request'
+    env:
+      TF_VAR_domain_name: ${{ secrets.PROD_DOMAIN }}
+      TF_VAR_db_username: ${{ secrets.PROD_DB_USERNAME }}
+      TF_VAR_db_password: ${{ secrets.PROD_DB_PASSWORD }}
+      TF_VAR_secrets_manager_arn_pattern: ${{ secrets.SECRETS_MANAGER_ARN_PATTERN }}
+
+    steps:
+      - name: "Checkout"
+        uses: actions/checkout@v4
+
+      - name: "Configure AWS Credentials"
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: "Setup Terraform"
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.8.0
+          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+
+      - name: "Terraform Init"
+        run: terraform -chdir=terraform/aws/production init
+
+      - name: "Terraform Plan"
+        run: terraform -chdir=terraform/aws/production plan
+
+      - name: "Terraform Security Scan"
+        uses: aquasecurity/tfsec-action@v1.0.0
+        with:
+          working_directory: terraform/aws/production
+
+  prod-apply:
+    name: "Production Apply"
+    runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch'
+    env:
+      TF_VAR_domain_name: ${{ secrets.PROD_DOMAIN }}
+      TF_VAR_db_username: ${{ secrets.PROD_DB_USERNAME }}
+      TF_VAR_db_password: ${{ secrets.PROD_DB_PASSWORD }}
+      TF_VAR_secrets_manager_arn_pattern: ${{ secrets.SECRETS_MANAGER_ARN_PATTERN }}
+
+    steps:
+      - name: "Checkout"
+        uses: actions/checkout@v4
+
+      - name: "Configure AWS Credentials"
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: "Setup Terraform"
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.8.0
+          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+
+      - name: "Terraform Init"
+        run: terraform -chdir=terraform/aws/production init
+
+      - name: "Terraform Apply"
+        run: terraform -chdir=terraform/aws/production apply -auto-approve
