--- a/.github/workflows/terraform-aws.yml
+++ b/.github/workflows/terraform-aws.yml
@@ -4,6 +4,7 @@ on:
   pull_request:
     paths:
       - "terraform/aws/staging/**"
+      - "terraform/aws/production/**"
       - "apps/web/src/**"
       - "apps/web/package.json"
       - "apps/web/bun.lock"
@@ -24,9 +25,6 @@ env:
   TF_WORKSPACE: ${{ secrets.TF_CLOUD_WORKSPACE }}
   AWS_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
   ECR_REPOSITORY: "lornu-ai-staging"
-  # Common TF Vars
-  TF_VAR_resource_prefix: ${{ secrets.PROD_RESOURCE_PREFIX }}
-  TF_VAR_github_repo: ${{ secrets.PROD_GITHUB_REPO }}
 
 jobs:
   build:
@@ -115,6 +113,8 @@ jobs:
           TF_VAR_acm_certificate_arn: ${{ secrets.ACM_CERTIFICATE_ARN }}
           TF_VAR_secrets_manager_arn_pattern: ${{ secrets.SECRETS_MANAGER_ARN_PATTERN }}
           TF_VAR_docker_image: ${{ needs.build.outputs.image-uri }}
+          TF_VAR_resource_prefix: ${{ secrets.PROD_RESOURCE_PREFIX }}
+          TF_VAR_github_repo: ${{ secrets.PROD_GITHUB_REPO }}
         run: terraform -chdir=terraform/aws/staging plan
 
       - name: "Terraform Security Scan"
@@ -135,14 +135,15 @@ jobs:
       - name: "Configure AWS Credentials"
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_ACTIONS_ROLE_ARN }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
       - name: "Setup Terraform"
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.8.0
-          cli_config_credentials_token: ${{ secrets.TERRAFORM_API_TOKEN }}
+          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
       - name: "Terraform Init"
         run: terraform -chdir=terraform/aws/staging init
@@ -151,6 +152,9 @@ jobs:
         env:
           TF_VAR_acm_certificate_arn: ${{ secrets.ACM_CERTIFICATE_ARN }}
           TF_VAR_secrets_manager_arn_pattern: ${{ secrets.SECRETS_MANAGER_ARN_PATTERN }}
+          TF_VAR_docker_image: ${{ needs.build.outputs.image-uri }}
+          TF_VAR_resource_prefix: ${{ secrets.PROD_RESOURCE_PREFIX }}
+          TF_VAR_github_repo: ${{ secrets.PROD_GITHUB_REPO }}
         run: terraform -chdir=terraform/aws/staging apply -auto-approve
 
       - name: "Update kubeconfig"
@@ -174,6 +178,7 @@ jobs:
   prod-plan:
     name: "Production Plan"
     runs-on: ubuntu-latest
+    needs: build
     if: github.event_name == 'pull_request'
     env:
       TF_VAR_domain_name: ${{ secrets.PROD_DOMAIN }}
@@ -181,6 +186,9 @@ jobs:
       TF_VAR_db_password: ${{ secrets.PROD_DB_PASSWORD }}
       TF_VAR_secrets_manager_arn_pattern: ${{ secrets.SECRETS_MANAGER_ARN_PATTERN }}
       TF_VAR_acm_certificate_arn: ${{ secrets.ACM_CERTIFICATE_ARN }}
+      TF_VAR_docker_image: ${{ needs.build.outputs.image-uri }}
+      TF_VAR_resource_prefix: ${{ secrets.PROD_RESOURCE_PREFIX }}
+      TF_VAR_github_repo: ${{ secrets.PROD_GITHUB_REPO }}
 
     steps:
       - name: "Checkout"
@@ -224,6 +232,7 @@ jobs:
   prod-apply:
     name: "Production Apply"
     runs-on: ubuntu-latest
+    needs: build
     if: github.event_name == 'workflow_dispatch'
     env:
       TF_VAR_domain_name: ${{ secrets.PROD_DOMAIN }}
@@ -231,6 +240,9 @@ jobs:
       TF_VAR_db_password: ${{ secrets.PROD_DB_PASSWORD }}
       TF_VAR_secrets_manager_arn_pattern: ${{ secrets.SECRETS_MANAGER_ARN_PATTERN }}
       TF_VAR_acm_certificate_arn: ${{ secrets.ACM_CERTIFICATE_ARN }}
+      TF_VAR_docker_image: ${{ needs.build.outputs.image-uri }}
+      TF_VAR_resource_prefix: ${{ secrets.PROD_RESOURCE_PREFIX }}
+      TF_VAR_github_repo: ${{ secrets.PROD_GITHUB_REPO }}
 
     steps:
       - name: "Checkout"
