--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -2,21 +2,17 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: lornu-ai
-<<<<<<< HEAD
-=======
   labels:
     app: lornu-ai
->>>>>>> origin/main
 spec:
   replicas: 2
   selector:
     matchLabels:
-<<<<<<< HEAD
-      app.kubernetes.io/name: lornu-ai
+      app: lornu-ai
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: lornu-ai
+        app: lornu-ai
     spec:
       serviceAccountName: lornu-ai
       securityContext:
@@ -30,49 +26,10 @@ spec:
         ports:
         - name: http
           containerPort: 8080
-=======
-      app: lornu-ai
-  template:
-    metadata:
-      labels:
-        app: lornu-ai
-    spec:
-      containers:
-      - name: lornu-ai
-        image: lornu-ai:latest
-        ports:
-        - containerPort: 8080
-          name: http
->>>>>>> origin/main
           protocol: TCP
         env:
         - name: PORT
           value: "8080"
-<<<<<<< HEAD
-        - name: ENVIRONMENT
-          valueFrom:
-            configMapKeyRef:
-              name: lornu-ai-config
-              key: environment
-        - name: RESEND_API_KEY
-          valueFrom:
-            secretKeyRef:
-              name: lornu-ai-secrets
-              key: resend-api-key
-              optional: true
-        - name: CONTACT_EMAIL
-          valueFrom:
-            configMapKeyRef:
-              name: lornu-ai-config
-              key: contact-email
-              optional: true
-        - name: RATE_LIMIT_BYPASS_SECRET
-          valueFrom:
-            secretKeyRef:
-              name: lornu-ai-secrets
-              key: rate-limit-bypass-secret
-              optional: true
-=======
         - name: HOST
           value: "0.0.0.0"
         - name: PYTHONPATH
@@ -80,7 +37,9 @@ spec:
         envFrom:
         - configMapRef:
             name: lornu-ai-config
->>>>>>> origin/main
+        - secretRef:
+            name: lornu-ai-secrets
+            optional: true
         resources:
           requests:
             memory: "256Mi"
@@ -88,7 +47,6 @@ spec:
           limits:
             memory: "512Mi"
             cpu: "500m"
-<<<<<<< HEAD
         securityContext:
           allowPrivilegeEscalation: false
           readOnlyRootFilesystem: true
@@ -97,7 +55,7 @@ spec:
             - ALL
         readinessProbe:
           httpGet:
-            path: /api/health
+            path: /
             port: http
           initialDelaySeconds: 5
           periodSeconds: 10
@@ -105,7 +63,7 @@ spec:
           failureThreshold: 3
         livenessProbe:
           httpGet:
-            path: /api/health
+            path: /
             port: http
           initialDelaySeconds: 15
           periodSeconds: 20
@@ -117,17 +75,3 @@ spec:
       volumes:
       - name: tmp
         emptyDir: {}
-=======
-        livenessProbe:
-          httpGet:
-            path: /health
-            port: 8080
-          initialDelaySeconds: 30
-          periodSeconds: 10
-        readinessProbe:
-          httpGet:
-            path: /health
-            port: 8080
-          initialDelaySeconds: 5
-          periodSeconds: 5
->>>>>>> origin/main
